# VulnCases

./: LICENSE  README.md  cross-site-scripting-xss.php
Linux Stack Buffer Overflow/: README.md  build.sh
Multi Zip Slip (Arbitrary Write in Archive Extraction)/: malicious.tar
Multi Zip Slip (Unsafe Archive Extraction)/: README.md  libarchive_example.c  python_example.py
Posix Command Injection/: README.md
Posix Command Injection/src/CmdInjExample/: CMakeLists.txt  FileParser.cpp  FileParser.h  main.cpp  poc.rb
Posix Null Byte Terminator/: README.md
Posix Stack Buffer Overflow/: compile.sh  webserver  webserver.cpp
Windows COM Ref Counting Use After Free/: README.md
Windows Destructor Double Free/: DoubleFree.cpp  README.md
Windows Format String Arbitrary Write/: README.md  format_string_arbitrary_write.cpp
Windows Heap Memory Leak/: README.md  client.rb  mem_leak_server.cpp
Windows Heap Overflow Arbitrary Code Execution/: READMD.md  README.md  smash_test.cpp
Windows Heap Overflow Info Leak/: README.md  heap_overflow_example.cpp
Windows Heap Overflow Leak/: READMD.md  heap_overflow_leak.cpp
Windows Heartbleed OOB Read/: README.md  client.rb  heartbleed_example.c
Windows Integer Overflow/: README.md  integer_overflow_example.c
Windows Out of Scope Double Free/: README.md
Windows Stack Buffer Overflow/: README.md  vulnerable_service.c
Windows Type Confusion/: README.md  type_confusion_examples.cpp
Windows Unicode Buffer Overflow/: README.md
Windows Unicode Overflow/: README.md  unicode_overflow.c
Windows Unsafe DLL Loading/: README.md  (+2 more)
(+60 files in other folders)
